--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,13 @@
     "iron-overlay-behavior": "polymerelements/iron-overlay-behavior#^1.8.6",
     "mediaelement": "^2.23.1",
     "jquery": "^3.1.1",
-    "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#^1.0.6",
-    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#^1.1.1",
+    "iron-form-element-behavior": "^1.0.6",
+    "iron-validatable-behavior": "^1.1.1",
     "paper-dialog": "polymerelements/paper-dialog#^1.1.0",
     "neon-animation": "polymerelements/neon-animation#^1.2.4",
     "web-animations-js": "^2.2.2",
-    "paper-dialog-scrollable": "polymerelements/paper-dialog-scrollable#^1.1.5"
+    "paper-dialog-scrollable": "polymerelements/paper-dialog-scrollable#^1.1.5",
+    "iron-fit-behavior": "^1.2.5"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
