--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "web-animations-js": "^2.2.2",
     "paper-dialog-scrollable": "polymerelements/paper-dialog-scrollable#^1.1.5",
     "iron-fit-behavior": "^1.2.5",
-    "iron-resizable-behavior": "^1.0.5"
+    "iron-resizable-behavior": "^1.0.5",
+    "paper-progress": "polymerelements/paper-progress#^1.0.11"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
