--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "iron-resizable-behavior": "^1.0.5",
     "paper-progress": "polymerelements/paper-progress#^1.0.11",
     "paper-tabs": "^1.7.0",
-    "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
-    "plutonium-i18n-controls": "lordoftheflies/plutonium-i18n-controls"
+    "iron-collapse": "PolymerElements/iron-collapse#^1.3.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
